--- a/css/style.css
+++ b/css/style.css
@@ -31,6 +31,23 @@ body {
   width: 100%;
   max-width: 700px;
 }
+.container::before,
+.container::after {
+  content: '';
+  background: red;
+  display: block;
+  position: absolute;
+  top: 0;
+  height: 100%;
+  width: 400px;
+  z-index: -1;
+}
+.container::before {
+  left: 0
+}
+.container::after {
+  right: 0
+}
 
 /******************************************
 /* ^ container
@@ -90,6 +107,7 @@ header button {
 
 main {
   width: 100%;
+  height: 100dvh;
   background-color: aquamarine;
 }
 
